downgrade swagger version to fix generate problem
