# hr-soft/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\CandidatesController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -17,3 +18,10 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+Route::resource('candidates', CandidatesController::class)
+    ->only('index', 'store', 'update', 'show')
+    ->parameter('candidates', 'id');
+
+
+
